[openrewrite] add `UpgradeToJava21`